<resources>
    <string name="app_name">消费服务网</string>
    <string name="no_net">网络连接失败</string>
    <string name="search_hint">请输入商品名称</string>
    <string name="search_service_hint">请输入店铺名称</string>
    <string name="search_merchant_hint">请输入商家名称</string>
    <string name="search_store_hint">搜索店铺内商品</string>
    <string name="search_hint_">请输入店铺名或商品名</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="service">服务</string>
    <string name="news">资讯</string>
    <string name="mine">我的</string>
    <string name="all_goods">全部商品</string>
    <string name="new_arrival">上新</string>
    <string name="progress_de">%1$s\%</string>
    <string name="vip_area">VIP专区</string>
    <string name="logout">注销</string>
    <string name="text_no_pay">待支付</string>
    <string name="text_paid">已支付</string>
    <string name="text_send">已发货</string>
    <string name="text_all_order">全部订单</string>
    <string name="text_to_all_order">查看全部订单</string>
    <string name="text_setting">设置</string>
    <string name="text_login">点击登录</string>
    <string name="text_location">当前位置:%1$s</string>
    <string name="text_due_payment">我的订单</string>
    <string name="home_rmb">￥%1$s</string>
    <string name="home_lb">龙币:%1$s</string>
    <string name="he_ji">合计:%1$s</string>
    <string name="special">特惠</string>
    <string name="trendw">潮流女装</string>
    <string name="trendm">时尚男装</string>
    <string name="huazhuang">个护化妆</string>
    <string name="digital">数码电器</string>
    <string name="baby">母婴童装</string>
    <string name="xxxb">鞋靴箱包</string>
    <string name="life">家居生活</string>
    <string name="fooddrink">食品酒水</string>
    <string name="healthcare">营养保健</string>
    <string name="home_service">生活服务</string>
    <string name="lbdh">龙币兑换</string>
    <string name="whole">全部分类</string>
    <string name="config">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_tip">输入服务网支付密码</string>
    <string name="txt_notice">最新公告</string>
    <string name="txt_topic">新闻资讯</string>
    <string name="txt_fund">麻团基金</string>
    <string name="txt_cooperation_merchant">联盟商家</string>
    <string name="txt_experience_center">体验中心</string>
    <string name="txt_agent">加盟代理</string>
    <string name="txt_activity">活动</string>
    <string name="txt_business_institute">商学院</string>
    <string name="txt_service">增值服务</string>
    <string name="txt_activity_info">活动详情</string>
    <string name="txt_wealth">财富</string>
    <string name="txt_register">注册</string>
    <string name="txt_perfect_info">资料完善</string>
    <string name="txt_queue">兑现券排队</string>
    <string name="txt_manager">兑现券管理</string>
    <string name="txt_suggest">推荐</string>
    <string name="txt_scan">扫描身份证注册</string>
    <string name="txt_game_club">游戏中心</string>
    <string name="txt_address">我的店铺位置</string>
    <string name="txt_username">用户名：</string>
    <string name="txt_realname"> 真实姓名：</string>
    <string name="txt_mymember"> 我的联盟会员</string>
    <string name="txt_feedback"> 意见反馈</string>
    <string name="txt_safe"> 安全信使</string>
    <string name="txt_long_bi_record">龙币抽奖记录</string>
    <string name="txt_quan_record">兑现券中奖记录</string>
    <string name="txt_perfect_info_title">资料完善</string>
    <string name="txt_finance_info">财务信息</string>
    <string name="txt_user_info">个人信息</string>
    <string name="txt_mobile_phone">电话号码：</string>
    <string name="txt_post_code">邮政编码：</string>
    <string name="txt_delivery">邮寄地址：</string>
    <string name="txt_ejpass">支付密码：</string>
    <string name="txt_email">电子邮箱：</string>
    <string name="txt_name">收款人姓名：</string>
    <string name="txt_bank_card">银行卡号：</string>
    <string name="txt_bank">开户银行：</string>
    <string name="txt_bank_area">开户地域：</string>
    <string name="txt_save">保存</string>
    <string name="txt_coupon_queue_title">兑现券排队</string>
    <string name="txt_electron_coupon">电子券</string>
    <string name="txt_paper_coupon">纸券</string>
    <string name="txt_btn_transfer">转让</string>
    <string name="txt_btn_queue">排队</string>
    <string name="txt_coupon_code">兑现券编号：</string>
    <string name="txt_coupon_pass">兑现券密码：</string>
    <string name="txt_coupon_scan">扫一扫</string>
    <string name="txt_coupon_tip">小提示：如果兑现券的密码不足6位，请在前面加0补齐。</string>
    <string name="txt_paper_coupon_queue_title">纸券排队</string>
    <string name="txt_electron_coupon_queue_title">电子券排队</string>
    <string name="txt_fifty_queue">50进1队列</string>
    <string name="txt_twenty_five_queue">25进1队列</string>
    <string name="txt_member_queue">开启会员队列</string>
    <string name="txt_business_queue">开启商家队列</string>
    <string name="txt_user_name">商家用户名：</string>
    <string name="txt_business">商家名称：</string>
    <string name="txt_queue_num">输入排队数量：</string>
    <string name="txt_start">进入排队</string>
    <string name="txt_electron_coupon_transfer_title">电子兑现券转让</string>
    <string name="txt_w_wealth">财富</string>
    <string name="txt_e_purse">电子钱包余额:￥</string>
    <string name="txt_transfer">转账</string>
    <string name="txt_withdraw">提现申请</string>
    <string name="txt_bill">账单</string>
    <string name="txt_status">状态</string>
    <string name="txt_dou">麻豆</string>
    <string name="txt_bi">龙币</string>
    <string name="txt_total_dou">总麻豆</string>
    <string name="txt_ticket">车票</string>
    <string name="txt_stamp">游票</string>
    <string name="txt_transfer_title">转账给朋友</string>
    <string name="txt_money">金额：</string>
    <string name="txt_receiver">接收人用户名:</string>
    <string name="txt_real_name">真实姓名：</string>
    <string name="txt_tip">小提示：系统会根据您输入的接收会员昵称弹出该用户的真实姓名，请认真核对后再确认，款项一经转出不可撤销。</string>
    <string name="txt_withdraw_title">电子钱包提现申请</string>
    <string name="txt_withdraw_money">提现金额：</string>
    <string name="txt_common">请求说明:</string>
    <string name="txt_btn_withdraw">提现申请</string>
    <string name="txt_withdraw_tip">小提示：提现金额最小不得小于100元。</string>
    <string name="txt_transaction_record_title">电子钱包交易记录</string>
    <string name="txt_transaction_name">交易名称：</string>
    <string name="txt_transaction_money">金额：￥</string>
    <string name="txt_transaction_date">交易时间：</string>
    <string name="txt_transaction_common">说明：</string>
    <string name="txt_unionmember_title">%1$s的联盟会员</string>
    <string name="txt_memberstatus">会员状态：</string>
    <string name="txt_membername">用户名：</string>
    <string name="txt_truemembername">真实姓名：</string>
    <string name="txt_madou">麻豆：</string>
    <string name="txt_memberstatics">会员统计：</string>
    <string name="txt_totalmadou">总麻豆：</string>
    <string name="txt_registdate">注册时间：</string>
    <string name="txt_tipe">小提示：系统会根据您的会员昵称弹出你的电话号码，请认真核对后再确认订阅，如有问题请去资料完善更改。</string>
    <string name="volume_personal">个人私有队列：</string>
    <string name="volume_business">商家私有队列：</string>
    <string name="quick_regist_idnum">身份证号：</string>
    <string name="quick_regist_name">姓名：</string>
    <string name="quick_regist_regist">注&#160;&#160;册</string>
    <string name="quick_regist_sys">重新扫一扫</string>
    <string name="volume_manage_title">兑现劵管理</string>
    <string name="coupon_transfer_tip">小提示：会员兑现券一经转让将不可撤销，请谨慎操作</string>
    <string name="txt_quan">券</string>
    <string name="txt_dzq">电子券</string>
    <string name="txt_ptzq">普通纸券</string>
    <string name="txt_ewmzq">二维码纸券</string>
    <string name="txt_ypdck">已排队查看</string>
    <string name="txt_mianzhi">电子券面值选择</string>
    <string name="txt_ptzqpd">普通纸券排队</string>
    <string name="txt_fast_regist">快速注册</string>
    <string name="login_username">用户名：</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="camera_tip">小提示：如果扫描不到，请将手机离远试一试</string>
    <string name="txt_suggest_username">用户名：</string>
    <string name="txt_suggest_pass">密码：</string>
    <string name="txt_confirm_pass">确认密码：</string>
    <string name="txt_id_card">身份证号：</string>
    <string name="txt_region">国家/地区：</string>
    <string name="txt_is_show"> 显示密码</string>
    <string name="text_type"> 身份:</string>
    <string name="txt_service_man">服务专员：</string>
    <string name="text_normal">普通用户</string>
    <string name="text_vip">VIP会员</string>
    <string name="txt_subscribe">订阅</string>
    <string name="txt_continue_subscribe">继续订阅</string>
    <string name="txt_cancel"> 取消订阅</string>
    <string name="txt_cooperation_merchant_title">联盟商家</string>
    <string name="txt_search">搜索</string>
    <string name="txt_major">主营：</string>
    <string name="txt_company_address">地址：</string>
    <string name="txt_company_phone">联系电话：</string>
    <string name="city_choose">城市选择</string>
    <string name="normal_member"> 普通会员</string>
    <string name="vip_member"> VIP会员</string>
    <string name="auto_login"> 自动登录</string>
    <string name="register">注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="txt_cart">我的购物车</string>
    <string name="txt_all_select">全选</string>
    <string name="text_buy">去结算</string>
    <string name="text_tips">请分开结算下面商品</string>
    <string name="text_all_select">全选</string>
    <string name="text_edit">编辑</string>
    <string name="text_delete">删除</string>
    <string name="text_cancel">取消</string>
    <string name="text_tip">提示</string>
    <string name="text_tip_confirm">确定要删除吗?</string>
    <string name="cart_no_goods">您还没有选择商品哦!</string>
    <string name="timer">%1$sS</string>
    <string name="subscribe_notice" formatted="false">
        <![CDATA[
         <div style="width:100%; font-family:FangSong;margin-top:10px">
            <div style="width:100%">
                <strong>您正在进行订购电子钱包短信验证码提醒业务，月功能费<font color=\'red\' size=14 ">2</font>元。</strong>
                <p><span style="font-weight:600;line-height:1.5em;font-size:14px;">订购说明：</span>当日提交当日生效，不满一个月的按一个月计算；</p>
                <p><span style="font-weight:600;line-height:1.5em;font-size:14px;">退订说明：</span>本月提交下月生效。</p>
                <p><span style="font-weight:600;line-height:1.5em;font-size:14px;">扣费时间：</span>每月1号系统自动从会员电子钱包中扣除，如电子钱包余额不足，您的订购业务将自动停止</p>
            </div>
        </div>
       ]]>
     </string>
    <string name="lottery_create_time">获奖时间:</string>
    <string name="my_lottery_record">我的中奖记录</string>
    <string name="send_message">发送短信</string>
    <string name="pass_code">验证码：</string>
    <string name="lottery_introduction" formatted="false">
         <![CDATA[
            <u>
            抽奖活动详细说明
            </u>
         ]]>
    </string>
    <string name="lottery_introduce">抽奖说明</string>
    <string name="winners">获奖者:</string>
    <string name="winners_notice">中奖通知</string>
    <string name="left_times">剩余抽奖次数:%1$s次</string>
    <string name="zero_times">抽奖次数已用完</string>
    <string name="tips" formatted="false">
         <![CDATA[
             <font color="red">每排一张</font>兑现券您都将获得一次抽奖机会。如果关闭此页面，将视为放弃抽奖，望及时点击抽奖。
         ]]>
        </string>
    <string name="thanks_for_you_participation">谢谢参与</string>
    <string name="buy">立即抢购</string>
    <string name="rebate">支持赠券</string>
    <string name="goods_detail">商品详情</string>
    <string name="text_goods_by">快递：</string>
    <string name="text_sell_count">月销量:</string>
    <string name="text_store_count">库存:</string>
    <string name="goods_store">店铺详情</string>
    <string name="text_goods_review">商品评价</string>
    <string name="text_goods_more_review">更多评价</string>
    <string name="text_suggest_goods">店铺推荐</string>
    <string name="add_money">(另支付:%1$s)</string>
    <string name="goods_buy_tip">购买须知</string>
    <string name="goods_no_store">商品库存不足</string>
    <string name="text_add_cart">加入购物车</string>
    <string name="text_goods_buy">立即购买</string>
    <string name="text_in_store">进店逛逛</string>
    <string name="text_reset">重置</string>
    <string name="text_count">共%1$s件,</string>
    <string name="text_total">合计:</string>
    <string name="search_summary">筛选</string>
    <string name="search_price">价格</string>
    <string name="search_sell_count">销量优先</string>
</resources>