<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context=".items.CartBuyPopItemView">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="15"
            android:padding="15dp"
            android:singleLine="true"
            android:text="红袖官方旗舰店" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/txt_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_count" />

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_total" />

            <TextView
                android:id="@+id/txt_rmb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/home_rmb"
                android:textColor="@color/price_color" />

            <TextView
                android:id="@+id/txt_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="+"
                android:textColor="@color/price_color" />

            <TextView
                android:id="@+id/txt_home_lb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/home_lb"
                android:textColor="@color/price_color" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/order_orange"
            android:text="@string/text_buy"
            android:textColor="@color/major_color" />

    </LinearLayout>

</LinearLayout>