<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_rmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/home_rmb"
        android:textColor="@color/home_rmb"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/txt_rmb"
        android:text="+"
        android:textColor="@color/home_rmb"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_home_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/txt_plus"
        android:text="@string/home_lb"
        android:textColor="@color/home_rmb"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_te_hui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/home_special"
        android:text="@string/special"
        android:textColor="@color/white" />
</RelativeLayout>