<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".fragments.NewsFragment">

    <com.zczczy.leo.fuwuwangapp.viewgroup.MyTitleBar
        android:id="@+id/my_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/major_color"
        android:minHeight="50dp"
        app:mTitle="@string/news" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider_layout"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                app:pager_animation="Accordion" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_notice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_notice"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/shape_activity_selector"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/txt_notice"
                        android:textSize="16sp"

                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_topic"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/shape_activity_selector"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/txt_topic"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_fund"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/shape_activity_selector"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/txt_fund"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_cooperation_merchant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_activity_selector"
                    android:clickable="true"
                    android:drawableTop="@drawable/cooperation_merchant"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/txt_cooperation_merchant" />

                <TextView
                    android:id="@+id/txt_experience_center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_agent_selector"
                    android:clickable="true"
                    android:drawableTop="@drawable/experience_center"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/txt_experience_center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_agent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_agent_selector"
                    android:clickable="true"
                    android:drawableTop="@drawable/agent"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/txt_agent" />

                <TextView
                    android:id="@+id/txt_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_activity_selector"
                    android:clickable="true"
                    android:drawableTop="@drawable/activity"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/txt_activity" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_business_institute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_activity_selector"
                    android:clickable="true"
                    android:drawableTop="@drawable/school"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/txt_business_institute" />

                <TextView
                    android:id="@+id/txt_service"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_agent_selector"
                    android:clickable="true"
                    android:drawableTop="@drawable/service"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/txt_service" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
